@@ -1,4 +1,5 @@
 Next release:
 
+0004280: Fix broken confirm_with_details decorator
 0004260: Factor tarball operations and possibly others to fabric-common so others can use them.
 0004258: Create Fabric project in Subversion
